2006-09-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/foreign.c (igraph_read_graph_dimacs, igraph_write_graph_dimacs)
	: added

	* src/foreign.c (igraph_write_graph_dimacs) : minor change, capacity
	is written with %g instead of %e

	* src/vector.c (igraph_vector_rank) : added

2006-09-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_density) : added loops argument

2006-09-24  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/flow.c (igraph_maxflow) : added

2006-09-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/type_indexededgelist.c (igraph_delete_edges) : corrected
	attribute handling bug
	* interfaces/python/graphobject.c : changed some default params
	* interfaces/python/graphobject.h : corrected docstrings

2006-09-15  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_proterties.c (igraph_density) : added

2006-09-11  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_grg_game) : bug corrected

2006-09-06  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_grg_game) : new, faster implementation
	* examples/simple/igraph_grg_game.c : slight change to make test 
	succeed with probability 1

2006-09-05  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/games.c (igraph_grg_game) : added
	* examples/simple/igraph_grg_game.c : added

	* src/games.c (igraph_barabasi_game, igraph_nonlinear_barabasi_game)
	(igraph_recent_degree_game, igraph_barabasi_aging_game)
	(igraph_recent_degree_aging_game) : use actual number of nodes instead
	of 0 in igraph_create, shouldn't change anything but looks nicer

2006-09-04  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_maxdegree) : added
	* examples/simple/igraph_degree.c : updated to test igraph_maxdegree

2006-08-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/structural_properties.c (igraph_reciprocity) : rewritten to
	eliminate invalid read (& sometimes segfault on windows)

2006-08-17  Gabor Csardi  <csardi@rmki.kfki.hu>
